--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -21,7 +21,14 @@ body {
   width: 100%;
   height: 43vh;
 }
-
+table {
+  margin-left: 20px;
+  margin-right: 20px;
+  
+}
+btn {
+  display: none;
+}
 /* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap'); */
 
 .testvideo {
