oleg600# Please enter the commit message for your changes. Lines startingll

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -123,6 +123,9 @@ btn {
 }
 
 /* ********************************************************** */
+.mr10 {
+  margin-right: 10px;
+}
 .yellow {
   color: #f9ce00;
 }
